src/grammar/grammar.output
Terminals which are not used

   WORKSPACE_ASSIGN


State 78 conflicts: 1 shift/reduce
State 183 conflicts: 1 shift/reduce
State 276 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: END_OF_INPUT
    2     | '\n'
    3     | stmt_or_expr '\n'
    4     | stmt_or_expr ';'
    5     | declaration '\n'
    6     | declaration ';'
    7     | '?' identifier '\n'
    8     | '?' identifier ';'
    9     | '?' identifier '.' identifier '\n'
   10     | '?' identifier '.' identifier ';'
   11     | '?' functionCall '\n'
   12     | '?' functionCall ';'
   13     | error '\n'
   14     | error ';'

   15 expression: constant
   16           | vector
   17           | '(' expression ')'
   18           | '-' expression
   19           | '+' expression
   20           | '!' expression
   21           | AND expression
   22           | DECREMENT variable
   23           | variable DECREMENT
   24           | INCREMENT variable
   25           | variable INCREMENT
   26           | expression ':' expression
   27           | expression '+' expression
   28           | expression '-' expression
   29           | expression '*' expression
   30           | expression '/' expression
   31           | expression '^' expression
   32           | expression '%' expression
   33           | expression LT expression
   34           | expression LE expression
   35           | expression EQ expression
   36           | expression NE expression
   37           | expression GE expression
   38           | expression GT expression
   39           | expression AND expression
   40           | expression OR expression
   41           | expression AND2 expression
   42           | expression OR2 expression
   43           | arrowAssign
   44           | equationAssign
   45           | tildeAssign
   46           | workspaceAssign
   47           | referenceAssign
   48           | additionAssign
   49           | subtractionAssign
   50           | multiplicationAssign
   51           | divisionAssign
   52           | functionCall
   53           | variable

   54 arrowAssign: expression ARROW_ASSIGN expression

   55 tildeAssign: expression TILDE_ASSIGN expression

   56 equationAssign: expression EQUATION_ASSIGN expression

   57 workspaceAssign: expression EQUAL expression

   58 referenceAssign: expression REFERENCE_ASSIGN expression

   59 additionAssign: expression ADDITION_ASSIGN expression

   60 subtractionAssign: expression SUBTRACTION_ASSIGN expression

   61 multiplicationAssign: expression MULTIPLICATION_ASSIGN expression

   62 divisionAssign: expression DIVISION_ASSIGN expression

   63 variable: identifier optElements
   64         | identifier '$' identifier optNamespaces
   65         | fxnCall '[' expression ']' optElements
   66         | '(' expression ')' '[' expression ']' optElements
   67         | variable '.' fxnCall '[' expression ']' optElements

   68 optElements: /* empty */
   69            | elementList

   70 elementList: '[' expression ']'
   71            | '[' ']'
   72            | elementList '[' expression ']'
   73            | elementList '[' ']'

   74 optNamespaces: /* empty */
   75              | namespaceList

   76 namespaceList: '$' identifier
   77              | namespaceList '$' namespaceList

   78 fxnCall: identifier '(' optArguments ')'

   79 functionCall: fxnCall
   80             | variable '.' fxnCall

   81 optArguments: /* empty */
   82             | argumentList

   83 argumentList: argument
   84             | argumentList ',' argument

   85 argument: expression
   86         | identifier EQUAL expression

   87 functionDef: FUNCTION identifier '(' optFormals ')' stmts
   88            | FUNCTION identifier optDims identifier '(' optFormals ')' stmts

   89 procedureDef: PROCEDURE identifier '(' optFormals ')' stmts
   90             | PROCEDURE identifier optDims identifier '(' optFormals ')' stmts

   91 optFormals: /* empty */
   92           | formalList

   93 formalList: formal
   94           | formalList ',' formal

   95 formal: identifier
   96       | identifier EQUAL expression
   97       | typeSpec identifier
   98       | typeSpec identifier EQUAL expression

   99 typeSpec: identifier optDims
  100         | MOD_CONST identifier optDims
  101         | MOD_DYNAMIC identifier optDims
  102         | MOD_STOCHASTIC identifier optDims
  103         | MOD_DETERMINISTIC identifier optDims

  104 optDims: /* empty */
  105        | dimList

  106 dimList: '[' ']'
  107        | dimList '[' ']'

  108 stmts: '{' stmtList '}'
  109      | stmt_or_expr

  110 stmtList: /* empty */
  111         | stmt_or_expr
  112         | stmtList ';' stmt_or_expr
  113         | stmtList ';'
  114         | stmtList '\n' stmt_or_expr
  115         | stmtList '\n'

  116 statement: ifStatement
  117          | forStatement
  118          | whileStatement
  119          | nextStatement
  120          | breakStatement
  121          | returnStatement

  122 stmt_or_expr: statement
  123             | expression

  124 declaration: classDef
  125            | functionDef
  126            | procedureDef
  127            | identifier optElements identifier

  128 memberDefs: /* empty */
  129           | memberDef
  130           | memberDefs ';' memberDef
  131           | memberDefs ';'
  132           | memberDefs '\n' memberDef
  133           | memberDefs '\n'

  134 memberDef: formal
  135          | PROTECTED formal
  136          | functionDef
  137          | procedureDef

  138 classDef: CLASS identifier ':' identifier '{' memberDefs '}'

  139 ifStatement: IF cond stmts
  140            | IF cond stmts ELSE stmts

  141 cond: '(' expression ')'

  142 forStatement: FOR forCond stmts

  143 forCond: '(' identifier IN expression ')'

  144 whileStatement: WHILE cond stmts

  145 nextStatement: NEXT

  146 breakStatement: BREAK

  147 returnStatement: RETURN
  148                | RETURN expression

  149 identifier: NAME

  150 vector: '[' vectorList ']'

  151 vectorList: vectorList ',' expression
  152           | expression

  153 constant: FALSE
  154         | TRUE
  155         | RBNULL
  156         | RBTAB
  157         | INT
  158         | STRING
  159         | REAL


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 2 3 5 7 9 11 13 114 115 132 133
'!' (33) 20
'$' (36) 64 76 77
'%' (37) 32
'(' (40) 17 66 78 87 88 89 90 141 143
')' (41) 17 66 78 87 88 89 90 141 143
'*' (42) 29
'+' (43) 19 27
',' (44) 84 94 151
'-' (45) 18 28
'.' (46) 9 10 67 80
'/' (47) 30
':' (58) 26 138
';' (59) 4 6 8 10 12 14 112 113 130 131
'?' (63) 7 8 9 10 11 12
'[' (91) 65 66 67 70 71 72 73 106 107 150
']' (93) 65 66 67 70 71 72 73 106 107 150
'^' (94) 31
'{' (123) 108 138
'}' (125) 108 138
error (256) 13 14
REAL (258) 159
INT (259) 157
NAME (260) 149
STRING (261) 158
RBNULL (262) 155
RBTAB (263) 156
FALSE (264) 153
TRUE (265) 154
FUNCTION (266) 87 88
PROCEDURE (267) 89 90
CLASS (268) 138
FOR (269) 142
IN (270) 143
IF (271) 139 140
ELSE (272) 140
WHILE (273) 144
NEXT (274) 145
BREAK (275) 146
RETURN (276) 147 148
MOD_CONST (277) 100
MOD_DYNAMIC (278) 101
MOD_STOCHASTIC (279) 102
MOD_DETERMINISTIC (280) 103
PROTECTED (281) 135
ARROW_ASSIGN (282) 54
TILDE_ASSIGN (283) 55
EQUATION_ASSIGN (284) 56
WORKSPACE_ASSIGN (285)
REFERENCE_ASSIGN (286) 58
ADDITION_ASSIGN (287) 59
SUBTRACTION_ASSIGN (288) 60
MULTIPLICATION_ASSIGN (289) 61
DIVISION_ASSIGN (290) 62
DECREMENT (291) 22 23
INCREMENT (292) 24 25
EQUAL (293) 57 86 96 98
AND (294) 21 39
OR (295) 40
AND2 (296) 41
OR2 (297) 42
GT (298) 38
GE (299) 37
LT (300) 33
LE (301) 34
EQ (302) 35
NE (303) 36
END_OF_INPUT (304) 1
UNOT (305)
UPLUS (306)
UMINUS (307)
UAND (308)


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
prog (75)
    on left: 1 2 3 4 5 6 7 8 9 10 11 12 13 14, on right: 0
expression (76)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
    33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
   , on right: 17 18 19 20 21 26 27 28 29 30 31 32 33 34 35 36 37 38
    39 40 41 42 54 55 56 57 58 59 60 61 62 65 66 67 70 72 85 86 96
    98 123 141 143 148 151 152
arrowAssign (77)
    on left: 54, on right: 43
tildeAssign (78)
    on left: 55, on right: 45
equationAssign (79)
    on left: 56, on right: 44
workspaceAssign (80)
    on left: 57, on right: 46
referenceAssign (81)
    on left: 58, on right: 47
additionAssign (82)
    on left: 59, on right: 48
subtractionAssign (83)
    on left: 60, on right: 49
multiplicationAssign (84)
    on left: 61, on right: 50
divisionAssign (85)
    on left: 62, on right: 51
variable (86)
    on left: 63 64 65 66 67, on right: 22 23 24 25 53 67 80
optElements (87)
    on left: 68 69, on right: 63 65 66 67 127
elementList (88)
    on left: 70 71 72 73, on right: 69 72 73
optNamespaces (89)
    on left: 74 75, on right: 64
namespaceList (90)
    on left: 76 77, on right: 75 77
fxnCall (91)
    on left: 78, on right: 65 67 79 80
functionCall (92)
    on left: 79 80, on right: 11 12 52
optArguments (93)
    on left: 81 82, on right: 78
argumentList (94)
    on left: 83 84, on right: 82 84
argument (95)
    on left: 85 86, on right: 83 84
functionDef (96)
    on left: 87 88, on right: 125 136
procedureDef (97)
    on left: 89 90, on right: 126 137
optFormals (98)
    on left: 91 92, on right: 87 88 89 90
formalList (99)
    on left: 93 94, on right: 92 94
formal (100)
    on left: 95 96 97 98, on right: 93 94 134 135
typeSpec (101)
    on left: 99 100 101 102 103, on right: 97 98
optDims (102)
    on left: 104 105, on right: 88 90 99 100 101 102 103
dimList (103)
    on left: 106 107, on right: 105 107
stmts (104)
    on left: 108 109, on right: 87 88 89 90 139 140 142 144
stmtList (105)
    on left: 110 111 112 113 114 115, on right: 108 112 113 114 115
statement (106)
    on left: 116 117 118 119 120 121, on right: 122
stmt_or_expr (107)
    on left: 122 123, on right: 3 4 109 111 112 114
declaration (108)
    on left: 124 125 126 127, on right: 5 6
memberDefs (109)
    on left: 128 129 130 131 132 133, on right: 130 131 132 133 138
memberDef (110)
    on left: 134 135 136 137, on right: 129 130 132
classDef (111)
    on left: 138, on right: 124
ifStatement (112)
    on left: 139 140, on right: 116
cond (113)
    on left: 141, on right: 139 140 144
forStatement (114)
    on left: 142, on right: 117
forCond (115)
    on left: 143, on right: 142
whileStatement (116)
    on left: 144, on right: 118
nextStatement (117)
    on left: 145, on right: 119
breakStatement (118)
    on left: 146, on right: 120
returnStatement (119)
    on left: 147 148, on right: 121
identifier (120)
    on left: 149, on right: 7 8 9 10 63 64 76 78 86 87 88 89 90 95
    96 97 98 99 100 101 102 103 127 138 143
vector (121)
    on left: 150, on right: 16
vectorList (122)
    on left: 151 152, on right: 150 151
constant (123)
    on left: 153 154 155 156 157 158 159, on right: 15


state 0

    0 $accept: . prog $end

    error         shift, and go to state 1
    REAL          shift, and go to state 2
    INT           shift, and go to state 3
    NAME          shift, and go to state 4
    STRING        shift, and go to state 5
    RBNULL        shift, and go to state 6
    RBTAB         shift, and go to state 7
    FALSE         shift, and go to state 8
    TRUE          shift, and go to state 9
    FUNCTION      shift, and go to state 10
    PROCEDURE     shift, and go to state 11
    CLASS         shift, and go to state 12
    FOR           shift, and go to state 13
    IF            shift, and go to state 14
    WHILE         shift, and go to state 15
    NEXT          shift, and go to state 16
    BREAK         shift, and go to state 17
    RETURN        shift, and go to state 18
    DECREMENT     shift, and go to state 19
    INCREMENT     shift, and go to state 20
    AND           shift, and go to state 21
    END_OF_INPUT  shift, and go to state 22
    '?'           shift, and go to state 23
    '+'           shift, and go to state 24
    '-'           shift, and go to state 25
    '('           shift, and go to state 26
    '['           shift, and go to state 27
    '\n'          shift, and go to state 28
    '!'           shift, and go to state 29

    prog                  go to state 30
    expression            go to state 31
    arrowAssign           go to state 32
    tildeAssign           go to state 33
    equationAssign        go to state 34
    workspaceAssign       go to state 35
    referenceAssign       go to state 36
    additionAssign        go to state 37
    subtractionAssign     go to state 38
    multiplicationAssign  go to state 39
    divisionAssign        go to state 40
    variable              go to state 41
    fxnCall               go to state 42
    functionCall          go to state 43
    functionDef           go to state 44
    procedureDef          go to state 45
    statement             go to state 46
    stmt_or_expr          go to state 47
    declaration           go to state 48
    classDef              go to state 49
    ifStatement           go to state 50
    forStatement          go to state 51
    whileStatement        go to state 52
    nextStatement         go to state 53
    breakStatement        go to state 54
    returnStatement       go to state 55
    identifier            go to state 56
    vector                go to state 57
    constant              go to state 58


state 1

   13 prog: error . '\n'
   14     | error . ';'

    '\n'  shift, and go to state 59
    ';'   shift, and go to state 60


state 2

  159 constant: REAL .

    $default  reduce using rule 159 (constant)


state 3

  157 constant: INT .

    $default  reduce using rule 157 (constant)


state 4

  149 identifier: NAME .

    $default  reduce using rule 149 (identifier)


state 5

  158 constant: STRING .

    $default  reduce using rule 158 (constant)


state 6

  155 constant: RBNULL .

    $default  reduce using rule 155 (constant)


state 7

  156 constant: RBTAB .

    $default  reduce using rule 156 (constant)


state 8

  153 constant: FALSE .

    $default  reduce using rule 153 (constant)


state 9

  154 constant: TRUE .

    $default  reduce using rule 154 (constant)


state 10

   87 functionDef: FUNCTION . identifier '(' optFormals ')' stmts
   88            | FUNCTION . identifier optDims identifier '(' optFormals ')' stmts

    NAME  shift, and go to state 4

    identifier  go to state 61


state 11

   89 procedureDef: PROCEDURE . identifier '(' optFormals ')' stmts
   90             | PROCEDURE . identifier optDims identifier '(' optFormals ')' stmts

    NAME  shift, and go to state 4

    identifier  go to state 62


state 12

  138 classDef: CLASS . identifier ':' identifier '{' memberDefs '}'

    NAME  shift, and go to state 4

    identifier  go to state 63


state 13

  142 forStatement: FOR . forCond stmts

    '('  shift, and go to state 64

    forCond  go to state 65


state 14

  139 ifStatement: IF . cond stmts
  140            | IF . cond stmts ELSE stmts

    '('  shift, and go to state 66

    cond  go to state 67


state 15

  144 whileStatement: WHILE . cond stmts

    '('  shift, and go to state 66

    cond  go to state 68


state 16

  145 nextStatement: NEXT .

    $default  reduce using rule 145 (nextStatement)


state 17

  146 breakStatement: BREAK .

    $default  reduce using rule 146 (breakStatement)


state 18

  147 returnStatement: RETURN .
  148                | RETURN . expression

    REAL       shift, and go to state 2
    INT        shift, and go to state 3
    NAME       shift, and go to state 4
    STRING     shift, and go to state 5
    RBNULL     shift, and go to state 6
    RBTAB      shift, and go to state 7
    FALSE      shift, and go to state 8
    TRUE       shift, and go to state 9
    DECREMENT  shift, and go to state 19
    INCREMENT  shift, and go to state 20
    AND        shift, and go to state 21
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '('        shift, and go to state 26
    '['        shift, and go to state 27
    '!'        shift, and go to state 29

    $default  reduce using rule 147 (returnStatement)

    expression            go to state 69
    arrowAssign           go to state 32
    tildeAssign           go to state 33
    equationAssign        go to state 34
    workspaceAssign       go to state 35
    referenceAssign       go to state 36
    additionAssign        go to state 37
    subtractionAssign     go to state 38
    multiplicationAssign  go to state 39
    divisionAssign        go to state 40
    variable              go to state 41
    fxnCall               go to state 42
    functionCall          go to state 43
    identifier            go to state 70
    vector                go to state 57
    constant              go to state 58


state 19

   22 expression: DECREMENT . variable

    NAME  shift, and go to state 4
    '('   shift, and go to state 71

    variable    go to state 72
    fxnCall     go to state 73
    identifier  go to state 70


state 20

   24 expression: INCREMENT . variable

    NAME  shift, and go to state 4
    '('   shift, and go to state 71

    variable    go to state 74
    fxnCall     go to state 73
    identifier  go to state 70


state 21

   21 expression: AND . expression

    REAL       shift, and go to state 2
    INT        shift, and go to state 3
    NAME       shift, and go to state 4
    STRING     shift, and go to state 5
    RBNULL     shift, and go to state 6
    RBTAB      shift, and go to state 7
    FALSE      shift, and go to state 8
    TRUE       shift, and go to state 9
    DECREMENT  shift, and go to state 19
    INCREMENT  shift, and go to state 20
    AND        shift, and go to state 21
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '('        shift, and go to state 26
    '['        shift, and go to state 27
    '!'        shift, and go to state 29

    expression            go to state 75
    arrowAssign           go to state 32
    tildeAssign           go to state 33
    equationAssign        go to state 34
    workspaceAssign       go to state 35
    referenceAssign       go to state 36
    additionAssign        go to state 37
    subtractionAssign     go to state 38
    multiplicationAssign  go to state 39
    divisionAssign        go to state 40
    variable              go to state 41
    fxnCall               go to state 42
    functionCall          go to state 43
    identifier            go to state 70
    vector                go to state 57
    constant              go to state 58


state 22

    1 prog: END_OF_INPUT .

    $default  reduce using rule 1 (prog)


state 23

    7 prog: '?' . identifier '\n'
    8     | '?' . identifier ';'
    9     | '?' . identifier '.' identifier '\n'
   10     | '?' . identifier '.' identifier ';'
   11     | '?' . functionCall '\n'
   12     | '?' . functionCall ';'

    NAME  shift, and go to state 4
    '('   shift, and go to state 71

    variable      go to state 76
    fxnCall       go to state 42
    functionCall  go to state 77
    identifier    go to state 78


state 24

   19 expression: '+' . expression

    REAL       shift, and go to state 2
    INT        shift, and go to state 3
    NAME       shift, and go to state 4
    STRING     shift, and go to state 5
    RBNULL     shift, and go to state 6
    RBTAB      shift, and go to state 7
    FALSE      shift, and go to state 8
    TRUE       shift, and go to state 9
    DECREMENT  shift, and go to state 19
    INCREMENT  shift, and go to state 20
    AND        shift, and go to state 21
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '('        shift, and go to state 26
    '['        shift, and go to state 27
    '!'        shift, and go to state 29

    expression            go to state 79
    arrowAssign           go to state 32
    tildeAssign           go to state 33
    equationAssign        go to state 34
    workspaceAssign       go to state 35
    referenceAssign       go to state 36
    additionAssign        go to state 37
    subtractionAssign     go to state 38
    multiplicationAssign  go to state 39
    divisionAssign        go to state 40
    variable              go to state 41
    fxnCall               go to state 42
    functionCall          go to state 43
    identifier            go to state 70
    vector                go to state 57
    constant              go to state 58


state 25

   18 expression: '-' . expression

    REAL       shift, and go to state 2
    INT        shift, and go to state 3
    NAME       shift, and go to state 4
    STRING     shift, and go to state 5
    RBNULL     shift, and go to state 6
    RBTAB      shift, and go to state 7
    FALSE      shift, and go to state 8
    TRUE       shift, and go to state 9
    DECREMENT  shift, and go to state 19
    INCREMENT  shift, and go to state 20
    AND        shift, and go to state 21
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '('        shift, and go to state 26
    '['        shift, and go to state 27
    '!'        shift, and go to state 29

    expression            go to state 80
    arrowAssign           go to state 32
    tildeAssign           go to state 33
    equationAssign        go to state 34
    workspaceAssign       go to state 35
    referenceAssign       go to state 36
    additionAssign        go to state 37
    subtractionAssign     go to state 38
    multiplicationAssign  go to state 39
    divisionAssign        go to state 40
    variable              go to state 41
    fxnCall               go to state 42
    functionCall          go to state 43
    identifier            go to state 70
    vector                go to state 57
    constant              go to state 58


state 26

   17 expression: '(' . expression ')'
   66 variable: '(' . expression ')' '[' expression ']' optElements

    REAL       shift, and go to state 2
    INT        shift, and go to state 3
    NAME       shift, and go to state 4
    STRING     shift, and go to state 5
    RBNULL     shift, and go to state 6
    RBTAB      shift, and go to state 7
    FALSE      shift, and go to state 8
    TRUE       shift, and go to state 9
    DECREMENT  shift, and go to state 19
    INCREMENT  shift, and go to state 20
    AND        shift, and go to state 21
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '('        shift, and go to state 26
    '['        shift, and go to state 27
    '!'        shift, and go to state 29

    expression            go to state 81
    arrowAssign           go to state 32
    tildeAssign           go to state 33
    equationAssign        go to state 34
    workspaceAssign       go to state 35
    referenceAssign       go to state 36
    additionAssign        go to state 37
    subtractionAssign     go to state 38
    multiplicationAssign  go to state 39
    divisionAssign        go to state 40
    variable              go to state 41
    fxnCall               go to state 42
    functionCall          go to state 43
    identifier            go to state 70
    vector                go to state 57
    constant              go to state 58


state 27

  150 vector: '[' . vectorList ']'

    REAL       shift, and go to state 2
    INT        shift, and go to state 3
    NAME       shift, and go to state 4
    STRING     shift, and go to state 5
    RBNULL     shift, and go to state 6
    RBTAB      shift, and go to state 7
    FALSE      shift, and go to state 8
    TRUE       shift, and go to state 9
    DECREMENT  shift, and go to state 19
    INCREMENT  shift, and go to state 20
    AND        shift, and go to state 21
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '('        shift, and go to state 26
    '['        shift, and go to state 27
    '!'        shift, and go to state 29

    expression            go to state 82
    arrowAssign           go to state 32
    tildeAssign           go to state 33
    equationAssign        go to state 34
    workspaceAssign       go to state 35
    referenceAssign       go to state 36
    additionAssign        go to state 37
    subtractionAssign     go to state 38
    multiplicationAssign  go to state 39
    divisionAssign        go to state 40
    variable              go to state 41
    fxnCall               go to state 42
    functionCall          go to state 43
    identifier            go to state 70
    vector                go to state 57
    vectorList            go to state 83
    constant              go to state 58


state 28

    2 prog: '\n' .

    $default  reduce using rule 2 (prog)


state 29

   20 expression: '!' . expression

    REAL       shift, and go to state 2
    INT        shift, and go to state 3
    NAME       shift, and go to state 4
    STRING     shift, and go to state 5
    RBNULL     shift, and go to state 6
    RBTAB      shift, and go to state 7
    FALSE      shift, and go to state 8
    TRUE       shift, and go to state 9
    DECREMENT  shift, and go to state 19
    INCREMENT  shift, and go to state 20
    AND        shift, and go to state 21
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '('        shift, and go to state 26
    '['        shift, and go to state 27
    '!'        shift, and go to state 29

    expression            go to state 84
    arrowAssign           go to state 32
    tildeAssign           go to state 33
    equationAssign        go to state 34
    workspaceAssign       go to state 35
    referenceAssign       go to state 36
    additionAssign        go to state 37
    subtractionAssign     go to state 38
    multiplicationAssign  go to state 39
    divisionAssign        go to state 40
    variable              go to state 41
    fxnCall               go to state 42
    functionCall          go to state 43
    identifier            go to state 70
    vector                go to state 57
    constant              go to state 58


state 30

    0 $accept: prog . $end

    $end  shift, and go to state 85


state 31

   26 expression: expression . ':' expression
   27           | expression . '+' expression
   28           | expression . '-' expression
   29           | expression . '*' expression
   30           | expression . '/' expression
   31           | expression . '^' expression
   32           | expression . '%' expression
   33           | expression . LT expression
   34           | expression . LE expression
   35           | expression . EQ expression
   36           | expression . NE expression
   37           | expression . GE expression
   38           | expression . GT expression
   39           | expression . AND expression
   40           | expression . OR expression
   41           | expression . AND2 expression
   42           | expression . OR2 expression
   54 arrowAssign: expression . ARROW_ASSIGN expression
   55 tildeAssign: expression . TILDE_ASSIGN expression
   56 equationAssign: expression . EQUATION_ASSIGN expression
   57 workspaceAssign: expression . EQUAL expression
   58 referenceAssign: expression . REFERENCE_ASSIGN expression
   59 additionAssign: expression . ADDITION_ASSIGN expression
   60 subtractionAssign: expression . SUBTRACTION_ASSIGN expression
   61 multiplicationAssign: expression . MULTIPLICATION_ASSIGN expression
   62 divisionAssign: expression . DIVISION_ASSIGN expression
  123 stmt_or_expr: expression .

    ARROW_ASSIGN           shift, and go to state 86
    TILDE_ASSIGN           shift, and go to state 87
    EQUATION_ASSIGN        shift, and go to state 88
    REFERENCE_ASSIGN       shift, and go to state 89
    ADDITION_ASSIGN        shift, and go to state 90
    SUBTRACTION_ASSIGN     shift, and go to state 91
    MULTIPLICATION_ASSIGN  shift, and go to state 92
    DIVISION_ASSIGN        shift, and go to state 93
    EQUAL                  shift, and go to state 94
    AND                    shift, and go to state 95
    OR                     shift, and go to state 96
    AND2                   shift, and go to state 97
    OR2                    shift, and go to state 98
    GT                     shift, and go to state 99
    GE                     shift, and go to state 100
    LT                     shift, and go to state 101
    LE                     shift, and go to state 102
    EQ                     shift, and go to state 103
    NE                     shift, and go to state 104
    '+'                    shift, and go to state 105
    '-'                    shift, and go to state 106
    '*'                    shift, and go to state 107
    '/'                    shift, and go to state 108
    ':'                    shift, and go to state 109
    '%'                    shift, and go to state 110
    '^'                    shift, and go to state 111

    $default  reduce using rule 123 (stmt_or_expr)


state 32

   43 expression: arrowAssign .

    $default  reduce using rule 43 (expression)


state 33

   45 expression: tildeAssign .

    $default  reduce using rule 45 (expression)


state 34

   44 expression: equationAssign .

    $default  reduce using rule 44 (expression)


state 35

   46 expression: workspaceAssign .

    $default  reduce using rule 46 (expression)


state 36

   47 expression: referenceAssign .

    $default  reduce using rule 47 (expression)


state 37

   48 expression: additionAssign .

    $default  reduce using rule 48 (expression)


state 38

   49 expression: subtractionAssign .

    $default  reduce using rule 49 (expression)


state 39

   50 expression: multiplicationAssign .

    $default  reduce using rule 50 (expression)


state 40

   51 expression: divisionAssign .

    $default  reduce using rule 51 (expression)


state 41

   23 expression: variable . DECREMENT
   25           | variable . INCREMENT
   53           | variable .
   67 variable: variable . '.' fxnCall '[' expression ']' optElements
   80 functionCall: variable . '.' fxnCall

    DECREMENT  shift, and go to state 112
    INCREMENT  shift, and go to state 113
    '.'        shift, and go to state 114

    $default  reduce using rule 53 (expression)


state 42

   65 variable: fxnCall . '[' expression ']' optElements
   79 functionCall: fxnCall .

    '['  shift, and go to state 115

    $default  reduce using rule 79 (functionCall)


state 43

   52 expression: functionCall .

    $default  reduce using rule 52 (expression)


state 44

  125 declaration: functionDef .

    $default  reduce using rule 125 (declaration)


state 45

  126 declaration: procedureDef .

    $default  reduce using rule 126 (declaration)


state 46

  122 stmt_or_expr: statement .

    $default  reduce using rule 122 (stmt_or_expr)


state 47

    3 prog: stmt_or_expr . '\n'
    4     | stmt_or_expr . ';'

    '\n'  shift, and go to state 116
    ';'   shift, and go to state 117


state 48

    5 prog: declaration . '\n'
    6     | declaration . ';'

    '\n'  shift, and go to state 118
    ';'   shift, and go to state 119


state 49

  124 declaration: classDef .

    $default  reduce using rule 124 (declaration)


state 50

  116 statement: ifStatement .

    $default  reduce using rule 116 (statement)


state 51

  117 statement: forStatement .

    $default  reduce using rule 117 (statement)


state 52

  118 statement: whileStatement .

    $default  reduce using rule 118 (statement)


state 53

  119 statement: nextStatement .

    $default  reduce using rule 119 (statement)


state 54

  120 statement: breakStatement .

    $default  reduce using rule 120 (statement)


state 55

  121 statement: returnStatement .

    $default  reduce using rule 121 (statement)


state 56

   63 variable: identifier . optElements
   64         | identifier . '$' identifier optNamespaces
   78 fxnCall: identifier . '(' optArguments ')'
  127 declaration: identifier . optElements identifier

    '('  shift, and go to state 120
    '['  shift, and go to state 121
    '$'  shift, and go to state 122

    $default  reduce using rule 68 (optElements)

    optElements  go to state 123
    elementList  go to state 124


state 57

   16 expression: vector .

    $default  reduce using rule 16 (expression)


state 58

   15 expression: constant .

    $default  reduce using rule 15 (expression)


state 59

   13 prog: error '\n' .

    $default  reduce using rule 13 (prog)


state 60

   14 prog: error ';' .

    $default  reduce using rule 14 (prog)


state 61

   87 functionDef: FUNCTION identifier . '(' optFormals ')' stmts
   88            | FUNCTION identifier . optDims identifier '(' optFormals ')' stmts

    '('  shift, and go to state 125
    '['  shift, and go to state 126

    $default  reduce using rule 104 (optDims)

    optDims  go to state 127
    dimList  go to state 128


state 62

   89 procedureDef: PROCEDURE identifier . '(' optFormals ')' stmts
   90             | PROCEDURE identifier . optDims identifier '(' optFormals ')' stmts

    '('  shift, and go to state 129
    '['  shift, and go to state 126

    $default  reduce using rule 104 (optDims)

    optDims  go to state 130
    dimList  go to state 128


state 63

  138 classDef: CLASS identifier . ':' identifier '{' memberDefs '}'

    ':'  shift, and go to state 131


state 64

  143 forCond: '(' . identifier IN expression ')'

    NAME  shift, and go to state 4

    identifier  go to state 132


state 65

  142 forStatement: FOR forCond . stmts

    REAL       shift, and go to state 2
    INT        shift, and go to state 3
    NAME       shift, and go to state 4
    STRING     shift, and go to state 5
    RBNULL     shift, and go to state 6
    RBTAB      shift, and go to state 7
    FALSE      shift, and go to state 8
    TRUE       shift, and go to state 9
    FOR        shift, and go to state 13
    IF         shift, and go to state 14
    WHILE      shift, and go to state 15
    NEXT       shift, and go to state 16
    BREAK      shift, and go to state 17
    RETURN     shift, and go to state 18
    DECREMENT  shift, and go to state 19
    INCREMENT  shift, and go to state 20
    AND        shift, and go to state 21
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '('        shift, and go to state 26
    '['        shift, and go to state 27
    '!'        shift, and go to state 29
    '{'        shift, and go to state 133

    expression            go to state 31
    arrowAssign           go to state 32
    tildeAssign           go to state 33
    equationAssign        go to state 34
    workspaceAssign       go to state 35
    referenceAssign       go to state 36
    additionAssign        go to state 37
    subtractionAssign     go to state 38
    multiplicationAssign  go to state 39
    divisionAssign        go to state 40
    variable              go to state 41
    fxnCall               go to state 42
    functionCall          go to state 43
    stmts                 go to state 134
    statement             go to state 46
    stmt_or_expr          go to state 135
    ifStatement           go to state 50
    forStatement          go to state 51
    whileStatement        go to state 52
    nextStatement         go to state 53
    breakStatement        go to state 54
    returnStatement       go to state 55
    identifier            go to state 70
    vector                go to state 57
    constant              go to state 58


state 66

  141 cond: '(' . expression ')'

    REAL       shift, and go to state 2
    INT        shift, and go to state 3
    NAME       shift, and go to state 4
    STRING     shift, and go to state 5
    RBNULL     shift, and go to state 6
    RBTAB      shift, and go to state 7
    FALSE      shift, and go to state 8
    TRUE       shift, and go to state 9
    DECREMENT  shift, and go to state 19
    INCREMENT  shift, and go to state 20
    AND        shift, and go to state 21
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '('        shift, and go to state 26
    '['        shift, and go to state 27
    '!'        shift, and go to state 29

    expression            go to state 136
    arrowAssign           go to state 32
    tildeAssign           go to state 33
    equationAssign        go to state 34
    workspaceAssign       go to state 35
    referenceAssign       go to state 36
    additionAssign        go to state 37
    subtractionAssign     go to state 38
    multiplicationAssign  go to state 39
    divisionAssign        go to state 40
    variable              go to state 41
    fxnCall               go to state 42
    functionCall          go to state 43
    identifier            go to state 70
    vector                go to state 57
    constant              go to state 58


state 67

  139 ifStatement: IF cond . stmts
  140            | IF cond . stmts ELSE stmts

    REAL       shift, and go to state 2
    INT        shift, and go to state 3
    NAME       shift, and go to state 4
    STRING     shift, and go to state 5
    RBNULL     shift, and go to state 6
    RBTAB      shift, and go to state 7
    FALSE      shift, and go to state 8
    TRUE       shift, and go to state 9
    FOR        shift, and go to state 13
    IF         shift, and go to state 14
    WHILE      shift, and go to state 15
    NEXT       shift, and go to state 16
    BREAK      shift, and go to state 17
    RETURN     shift, and go to state 18
    DECREMENT  shift, and go to state 19
    INCREMENT  shift, and go to state 20
    AND        shift, and go to state 21
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '('        shift, and go to state 26
    '['        shift, and go to state 27
    '!'        shift, and go to state 29
    '{'        shift, and go to state 133
